--- a/index.html
+++ b/index.html
@@ -2,32 +2,29 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8">
-  <title>銀河電腦城 | 電腦配件選購與自選砌機系統</title>
-  <!-- 引入 CSS 樣式表 -->
+  <title>銀河電腦城 | 電腦配件選購</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- 頁首，顯示網站名稱同主導覽 -->
+  <!-- 導航列 -->
   <header>
     <div class="container">
       <h1>銀河電腦城</h1>
       <nav>
         <ul>
-          <li><a href="#products">電腦配件選購</a></li>
-          <li><a href="#builder">自選砌機報價</a></li>
-          <li><a href="#about">關於我們</a></li>
+          <li><a href="index.html">電腦配件選購</a></li>
+          <li><a href="builder.html">自選砌機報價</a></li>
+          <li><a href="about.html">關於我們</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <!-- 主內容 -->
   <main>
-    <!-- 電腦配件選購區 -->
-    <section id="products" class="section">
+    <section class="section">
       <h2>熱門電腦配件</h2>
       <div class="product-list">
-        <!-- 每個產品都用 .product-card 標籤包住，方便設計 -->
+        <!-- 產品內容如前，可以自行加多啲 -->
         <div class="product-card">
           <h3>中央處理器（CPU）</h3>
           <p>Intel、AMD 多款型號</p>
@@ -50,92 +47,9 @@
         </div>
       </div>
     </section>
-
-    <!-- 自選砌機報價系統 -->
-    <section id="builder" class="section">
-      <h2>自選砌機報價系統</h2>
-      <form id="pc-builder">
-        <!-- 逐項選擇配件，並設選單 -->
-        <label>
-          CPU:
-          <select name="cpu" id="cpu">
-            <option value="0">-- 請選擇 --</option>
-            <option value="1800">Intel i5（$1800）</option>
-            <option value="2600">Intel i7（$2600）</option>
-            <option value="1400">AMD Ryzen 5（$1400）</option>
-            <option value="2200">AMD Ryzen 7（$2200）</option>
-          </select>
-        </label>
-        <label>
-          顯示卡:
-          <select name="gpu" id="gpu">
-            <option value="0">-- 請選擇 --</option>
-            <option value="3000">NVIDIA RTX 4060（$3000）</option>
-            <option value="4200">NVIDIA RTX 4070（$4200）</option>
-            <option value="2700">AMD RX 7600（$2700）</option>
-          </select>
-        </label>
-        <label>
-          記憶體:
-          <select name="ram" id="ram">
-            <option value="0">-- 請選擇 --</option>
-            <option value="400">DDR4 16GB（$400）</option>
-            <option value="800">DDR4 32GB（$800）</option>
-            <option value="700">DDR5 16GB（$700）</option>
-          </select>
-        </label>
-        <label>
-          儲存裝置:
-          <select name="storage" id="storage">
-            <option value="0">-- 請選擇 --</option>
-            <option value="350">SSD 512GB（$350）</option>
-            <option value="550">SSD 1TB（$550）</option>
-            <option value="900">SSD 2TB（$900）</option>
-            <option value="600">HDD 2TB（$600）</option>
-          </select>
-        </label>
-        <label>
-          電源供應器:
-          <select name="psu" id="psu">
-            <option value="0">-- 請選擇 --</option>
-            <option value="450">450W（$450）</option>
-            <option value="650">650W（$650）</option>
-            <option value="900">850W（$900）</option>
-          </select>
-        </label>
-        <label>
-          機箱:
-          <select name="case" id="case">
-            <option value="0">-- 請選擇 --</option>
-            <option value="400">標準 ATX（$400）</option>
-            <option value="600">高階 ATX（$600）</option>
-          </select>
-        </label>
-        <!-- 總價 -->
-        <div class="total">
-          <span>總價：</span><span id="totalPrice">$0</span>
-        </div>
-      </form>
-    </section>
-
-    <!-- 關於我們 -->
-    <section id="about" class="section">
-      <h2>關於銀河電腦城</h2>
-      <p>
-        銀河電腦城致力為顧客提供最齊全、最專業嘅電腦配件選購服務，
-        無論你係砌機新手定老手，都可以搵到合適嘅配件同享受貼心報價服務！
-      </p>
-    </section>
   </main>
-
-  <!-- 頁尾版權 -->
   <footer>
-    <div class="container">
-      &copy; 2025 銀河電腦城．版權所有
-    </div>
+    <div class="container">&copy; 2025 銀河電腦城．版權所有</div>
   </footer>
-
-  <!-- 引入 JavaScript 功能 -->
-  <script src="main.js"></script>
 </body>
 </html>
