--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         <h1>銀河電腦城</h1>
         <nav>
           <ul>
-            <li><a href="index.html">電腦配件選購</a></li>
+            <li><a href="index.html">產品目錄</a></li>
             <li><a href="builder.html">自選砌機報價</a></li>
             <li><a href="about.html">關於我們</a></li>
             <li><a href="register.html">註冊</a></li>
