--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li><a href="index.html">產品目錄</a></li>
             <li><a href="builder.html">自選砌機報價</a></li>
             <li><a href="about.html">關於我們</a></li>
+            <li><a href="login.html">登入</a></li>
             <li><a href="register.html">註冊</a></li>
           </ul>
         </nav>
