--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 
       .modal {
         background-color: #f8fafc;
-        border-color;:#007bff;
+        border-color:#007bff;
         padding: 20px;
         border-radius: 10px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
