交字小修改

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
             </div>
             <div>
               <h3>顯示卡</h3>
-              <p>GeForce &nbsp; AMD &nbsp; Intel &nbsp; Quadro</p>
+              <p>GeForce &nbsp; AMD </p>
             </div>
             <div>
               <h3>記憶體 (RAM)</h3>
-              <p>DDR5 &nbsp; DDR4 &nbsp; SODIMM</p>
+              <p>DDR5 &nbsp; DDR4 </p>
             </div>
             <div>
               <h3>儲存裝置</h3>
@@ -59,25 +59,19 @@
             </div>
             <div>
               <h3>主機板</h3>
-              <p>ATX &nbsp; MATX &nbsp; EATX &nbsp; ITX &nbsp; PCIE 擴展卡</p>
+              <p>ATX &nbsp; MATX </p>
             </div>
             <div>
               <h3>電腦散熱</h3>
-              <p>風冷、AIO水冷、散熱膏、機箱風扇</p>
+              <p>風冷 &nbsp; 水冷</p>
             </div>
             <div>
               <h3>機箱</h3>
-              <p>ATX、MATX、ITX、EATX、配件、RGB/LED燈條</p>
+              <p>ATX &nbsp; MATX</p>
             </div>
             <div>
               <h3>電源供應器</h3>
-              <p>600W或以下、650W-800W、850W-1000W、1050W-1200W、1250W或以上</p>
-            </div>
-            <div>
-              <h3>軟件</h3>
-              <p>作業系統、應用程式</p>
-            </div>
-          </div>
+              <p>650W-800W &nbsp; 850W-1000W</p>
         </div>
 
         <!-- 其他分類預留，預設隱藏 -->
