關於我們和CSS小調整

--- a/about.html
+++ b/about.html
@@ -25,8 +25,21 @@
       <section class="section">
         <h2>關於銀河電腦城</h2>
         <p>
-          銀河電腦城致力為顧客提供最齊全、最專業嘅電腦配件選購服務，
-          無論你係砌機新手定老手，都可以搵到合適嘅配件同享受貼心報價服務！
+          銀河電腦城 — 你專屬嘅電腦世界探索站！
+          喺呢度，科技同夢想完美結合，為你打造最齊全、最專業嘅電腦配件選購體驗。
+        </p>
+        <p>無論你係砌機新手，定係電競高手，銀河電腦城都係你嘅最佳拍檔。</p>
+        <p>
+          喺我哋嘅平台，你可以輕鬆揀選由Intel、AMD、NVIDIA等頂尖品牌打造嘅中央處理器、顯示卡、記憶體、儲存裝置等等，滿足你對性能同品質嘅苛刻要求。
+        </p>
+        <p>
+          我哋獨有嘅自選砌機報價系統，更係突破傳統購物模式嘅創新利器。用戶只需簡單幾個步驟，就可以自由組合心水零件，即時計算出精準總價，助你輕鬆打造理想電腦，唔使再為預算煩惱。
+        </p>
+        <p>
+          銀河電腦城唔單止係銷售平台，我哋仲致力提供貼心嘅售後服務同技術支援，確保每位顧客都享有最安心、最專業嘅購物旅程。
+        </p>
+        <p>
+          選擇銀河電腦城，係選擇信心同創新的保障。無論你追求高效運算，還是享受電競激情，銀河電腦城都會陪伴你開啟無限可能嘅科技冒險！
         </p>
       </section>
     </main>
