--- a/register.html
+++ b/register.html
@@ -80,6 +80,9 @@
           <li><a href="about.html">關於我們</a></li>
           <li><a href="login.html">登入</a></li>
           <li><a href="register.html">註冊</a></li>
+          <a href="cart.html" class="cart-link">
+              🛒 購物車 <span id="cart-count">0</span>
+            </a>
         </ul>
       </nav>
     </div>
