++修正資料庫

--- a/productList.html
+++ b/productList.html
@@ -29,7 +29,7 @@
             <li><a href="about.html">關於我們</a></li>
             <li><a href="login.html">登入</a></li>
             <li><a href="register.html">註冊</a></li>
-            <li><img src="./shopping_cart.jpeg" height="40" width=""></li>
+            <li><img src="./shopping_cart.jpeg" height="40" onclick="window.location.href='cartPage.html'" style="cursor: pointer;"></li>
 
             </a>
           </ul>
