+連結至產品列表及購物車頁面完成

--- a/productList.html
+++ b/productList.html
@@ -24,13 +24,12 @@
         <nav>
           <ul>
             <li><a href="index.html">主頁</a></li>
-            <li><a href="index.html">產品目錄</a></li>
+            <li><a href="productList.html">產品目錄</a></li>
             <li><a href="builder.html">自選砌機報價</a></li>
             <li><a href="about.html">關於我們</a></li>
             <li><a href="login.html">登入</a></li>
             <li><a href="register.html">註冊</a></li>
-            <li><img src="./shopping_cart.jpeg" height="40" onclick="window.location.href='cartPage.html'" style="cursor: pointer;"></li>
-
+            <li><img src="shopping_cart.jpeg" height="40" onclick="window.location.href='cartPage.html'" style="cursor: pointer;"></li>
             </a>
           </ul>
         </nav>
