--- a/register.html
+++ b/register.html
@@ -75,14 +75,12 @@
       <h1>銀河電腦城</h1>
       <nav>
         <ul>
-          <li><a href="index.html">產品目錄</a></li>
+          <li><a href="productList.html">產品目錄</a></li>
           <li><a href="builder.html">自選砌機報價</a></li>
           <li><a href="about.html">關於我們</a></li>
           <li><a href="login.html">登入</a></li>
           <li><a href="register.html">註冊</a></li>
-          <a href="cart.html" class="cart-link">
-              🛒 購物車 <span id="cart-count">0</span>
-            </a>
+          <li><img src="shopping_cart.jpeg" height="40" onclick="window.location.href='cartPage.html'" style="cursor: pointer;"></li>
         </ul>
       </nav>
     </div>
