--- a/productList.html
+++ b/productList.html
@@ -3,63 +3,122 @@
   <head>
     <meta charset="UTF-8" />
     <title>銀河電腦城 | 產品目錄</title>
+     
+    <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+    />
+  </head>
+  <body>
+    <!-- 導航列 -->
+
+    <header class="sticky-top">
+      <!-- collapse container -->
+      <div class="container container-fluid" id="collapseCon">
+        <h1 class="nav_h1" style="font-size: 30px">
+          <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
+          <a href="index.html" style="text-decoration: none; color: white"
+            >銀河電腦城</a
+          >
+        </h1>
+        <div>
+          <a href="cartPage.html"
+            ><img src="./img/shoppingCart.png" height="40"
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarToggleExternalContent"
+            aria-controls="navbarToggleExternalContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="fa fa-bars"></span>
+          </button>
+        </div>
+      </div>
+
+      <!-- normal container -->
+      <div class="container" id="normalCon">
+        <h1 class="nav_h1">
+          <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
+          <a href="index.html" style="text-decoration: none; color: white"
+            >銀河電腦城</a
+          >
+        </h1>
+        <nav>
+          <ul>
+            <li><a href="index.html">主頁</a></li>
+            <li><a href="productList.html">產品目錄</a></li>
+            <li><a href="builder.html">自選砌機報價</a></li>
+            <li><a href="about.html">關於我們</a></li>
+            <li>
+              <a href="login.html">登入</a> | <a href="register.html">註冊</a>
+            </li>
+            <li>
+              <a href="cartPage.html"
+                ><img src="./img/shoppingCart.png" height="40"
+              /></a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <!-- 導航列end -->
+
+    <main>
+      <!-- 導航列extent -->
+      <div class="collapse colbar" id="navbarToggleExternalContent">
+        <ul>
+          <li><a href="index.html">主頁</a></li>
+          <li><a href="productList.html">產品目錄</a></li>
+          <li><a href="builder.html">自選砌機報價</a></li>
+          <li><a href="about.html">關於我們</a></li>
+          <li>
+            <a href="login.html">登入</a> |
+            <a href="register.html">註冊</a>
+          </li>
+        </ul>
+      </div>
+      <!-- 導航列end extent -->
+      <div class="main-flex">
+        <!-- 側邊欄 -->
+        <aside class="sidebar">
+          <ul>
+            <li class="active" data-category="中央處理器">中央處理器</li>
+            <li data-category="顯示卡">顯示卡</li>
+            <li data-category="記憶體 (RAM)">記憶體 (RAM)</li>
+            <li data-category="儲存裝置">儲存裝置</li>
+            <li data-category="主機板">主機板</li>
+            <li data-category="電腦散熱">電腦散熱</li>
+            <li data-category="電源">電源</li>
+            <li data-category="機箱">機箱</li>
+            <li data-category="手提電腦">手提電腦</li>
+          </ul>
+        </aside>
+
+        <!-- 內容區 -->
+        <section id="productPanel"></section>
+      </div>
+    </main>
+    <!-- 頁尾 (Retained) -->
+    <footer>
+      <div class="container">© 2025 銀河電腦城．版權所有</div>
+    </footer>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <!-- 導航列 -->
-    <header>
-      <div class="container">
-        <h1>銀河電腦城</h1>
-        <nav>
-          <ul>
-            <li><a href="index.html">主頁</a></li>
-            <li><a href="index.html">產品目錄</a></li>
-            <li><a href="builder.html">自選砌機報價</a></li>
-            <li><a href="about.html">關於我們</a></li>
-            <li><a href="login.html">登入</a></li>
-            <li><a href="register.html">註冊</a></li>
-            <li><img src="./shopping_cart.jpeg" height="40" onclick="window.location.href='cartPage.html'" style="cursor: pointer;"></li>
-
-            </a>
-          </ul>
-        </nav>
-      </div>
-    </header>
-
-    <main class="main-flex">
-      <!-- 側邊欄 -->
-      <aside class="sidebar">
-        <ul>
-          <li class="active" data-category="中央處理器">中央處理器</li>
-          <li data-category="顯示卡">顯示卡</li>
-          <li data-category="記憶體 (RAM)">記憶體 (RAM)</li>
-          <li data-category="儲存裝置">儲存裝置</li>
-          <li data-category="主機板">主機板</li>
-          <li data-category="電腦散熱">電腦散熱</li>
-          <li data-category="電源">電源</li>
-          <li data-category="機箱">機箱</li>
-          <li data-category="手提電腦">手提電腦</li>
-        </ul>
-      </aside>
-
-      <!-- 內容區 -->
-      <section id="productPanel">
-      </section>
-    </main>
-    <footer>
-      <div class="container">&copy; 2025 銀河電腦城．版權所有</div>
-    </footer>
     <script src="productListScript.js"></script>
   </body>
 </html>
