--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </h1>
         <div>
           <a href="cartPage.html"
-            ><img class="carticon" src="./img/shoppingCart.png alt"
+            ><img class="carticon" src="./img/shoppingCart.png" style="height:40px" 
           /></a>
           <button
             class="navbar-toggler"
