--- a/register.html
+++ b/register.html
@@ -149,11 +149,24 @@
           </ul>
         </nav>
       </div>
+      <!-- 導航列extent -->
+      <div class="collapse colbar" id="navbarToggleExternalContent">
+        <ul>
+          <li><a href="index.html">主頁</a></li>
+          <li><a href="productList.html">產品目錄</a></li>
+          <li><a href="builder.html">自選砌機報價</a></li>
+          <li><a href="about.html">關於我們</a></li>
+          <li>
+            <a href="login.html">登入</a> |
+            <a href="register.html">註冊</a>
+          </li>
+        </ul>
+      </div>
+      <!-- 導航列end extent -->
     </header>
     <!-- 導航列end -->
 
     <main>
-      <!-- 導航列end extent -->
       <div class="login-container">
         <div class="login-form">
           <h3 style="color: #363d50">用戶註冊</h3>
