--- a/about.html
+++ b/about.html
@@ -92,8 +92,8 @@
     </header>
     <!-- 導航列end -->
 
-    <main>
-      <div class="about_content">
+    <main class="about_content">
+      <div>
         <h2><br />關於銀河電腦城</h2>
         <p>
           <br />
