--- a/register.html
+++ b/register.html
@@ -81,6 +81,13 @@
       .register-link:hover {
         text-decoration: underline;
       }
+
+      .register-center {
+        display: flex;
+        justify-content: center;
+        align-items: center
+      }
+      
       @media (max-width: 600px) {
         .modal {
           width: 95%;
@@ -166,7 +173,7 @@
     </header>
     <!-- 導航列end -->
 
-    <main>
+    <main class="register-center">
       <div class="login-container">
         <div class="login-form">
           <h3 style="color: #363d50">用戶註冊</h3>
