--- a/register.html
+++ b/register.html
@@ -30,6 +30,7 @@
         border-radius: 10px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         width: 90%;
+        width: 400px;
         max-width: 400px;
         text-align: center;
       }
