--- a/cartPage.html
+++ b/cartPage.html
@@ -19,7 +19,7 @@
    
   </head>
   <body>
-    <!-- 導航列 -->
+   <!-- 導航列 -->
 
     <header class="sticky-top">
       <!-- collapse container -->
@@ -31,9 +31,9 @@
           >
         </h1>
         <div>
-          <a href="cartPage.html"
-            ><img src="./img/shoppingCart.png" height="40"
-          /></a>
+           <a href="cartPage.html" class="cart-icon"
+                ><img src="./img/shoppingCart.png" height="40"
+              /><span class="cart-count-col">99</span></a>
           <button
             class="navbar-toggler"
             type="button"
@@ -66,14 +66,14 @@
               <a href="login.html">登入</a> | <a href="register.html">註冊</a>
             </li>
             <li>
-              <a href="cartPage.html"
-                ><img src="./img/shoppingCart.png" height="50" onclick="window.location.href='cartPage.html'" style="cursor: pointer;">
-              </a>
+              <a href="cartPage.html" class="cart-icon"
+                ><img src="./img/shoppingCart.png" height="50"
+              /><span class="cart-count">99</span></a>
             </li>
           </ul>
         </nav>
       </div>
-       <!-- 導航列extent -->
+      <!-- 導航列extent -->
       <div class="collapse colbar" id="navbarToggleExternalContent">
         <ul>
           <li><a href="index.html">主頁</a></li>
@@ -89,6 +89,7 @@
       <!-- 導航列end extent -->
     </header>
     <!-- 導航列end -->
+
 
     <main>
      
