--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
           >
         </h1>
         <div>
-          <a href="cartPage.html"
-            ><img class="carticon" src="./img/shoppingCart.png" style="height:40px" 
-          /></a>
+           <a href="cartPage.html" class="cart-icon"
+                ><img src="./img/shoppingCart.png" height="40"
+              /><span class="cart-count-col">99</span></a>
           <button
             class="navbar-toggler"
             type="button"
@@ -71,9 +71,9 @@
               <a href="login.html">登入</a> | <a href="register.html">註冊</a>
             </li>
             <li>
-              <a href="cartPage.html"
+              <a href="cartPage.html" class="cart-icon"
                 ><img src="./img/shoppingCart.png" height="50"
-              /></a>
+              /><span class="cart-count">99</span></a>
             </li>
           </ul>
         </nav>
