--- a/login.html
+++ b/login.html
@@ -113,9 +113,9 @@
           >
         </h1>
         <div>
-          <a href="cartPage.html"
-            ><img src="./img/shoppingCart.png" height="40"
-          /></a>
+           <a href="cartPage.html" class="cart-icon"
+                ><img src="./img/shoppingCart.png" height="40"
+              /><span class="cart-count-col">99</span></a>
           <button
             class="navbar-toggler"
             type="button"
@@ -148,9 +148,9 @@
               <a href="login.html">登入</a> | <a href="register.html">註冊</a>
             </li>
             <li>
-              <a href="cartPage.html"
-                ><img src="./img/shoppingCart.png" height="50" onclick="window.location.href='cartPage.html'" style="cursor: pointer;">
-              </a>
+              <a href="cartPage.html" class="cart-icon"
+                ><img src="./img/shoppingCart.png" height="50"
+              /><span class="cart-count">99</span></a>
             </li>
           </ul>
         </nav>
@@ -171,6 +171,7 @@
       <!-- 導航列end extent -->
     </header>
     <!-- 導航列end -->
+
 
     <main class="login-center">
       
