--- a/productList.html
+++ b/productList.html
@@ -17,7 +17,8 @@
     />
   </head>
   <body>
-    <!-- 導航列 -->
+  <!-- 導航列 -->
+
     <header class="sticky-top">
       <!-- collapse container -->
       <div class="container container-fluid" id="collapseCon">
@@ -28,9 +29,9 @@
           >
         </h1>
         <div>
-          <a href="cartPage.html"
-            ><img src="./img/shoppingCart.png" height="40"
-          /></a>
+           <a href="cartPage.html" class="cart-icon"
+                ><img src="./img/shoppingCart.png" height="40"
+              /><span class="cart-count-col">99</span></a>
           <button
             class="navbar-toggler"
             type="button"
@@ -44,6 +45,7 @@
           </button>
         </div>
       </div>
+
       <!-- normal container -->
       <div class="container" id="normalCon">
         <h1 class="nav_h1">
@@ -62,9 +64,9 @@
               <a href="login.html">登入</a> | <a href="register.html">註冊</a>
             </li>
             <li>
-              <a href="cartPage.html"
+              <a href="cartPage.html" class="cart-icon"
                 ><img src="./img/shoppingCart.png" height="50"
-              /></a>
+              /><span class="cart-count">99</span></a>
             </li>
           </ul>
         </nav>
@@ -85,6 +87,7 @@
       <!-- 導航列end extent -->
     </header>
     <!-- 導航列end -->
+
 
     <main>
       
