--- a/register.html
+++ b/register.html
@@ -105,6 +105,8 @@
   </head>
   <body>
    
+   <!-- 導航列 -->
+
     <header class="sticky-top">
       <!-- collapse container -->
       <div class="container container-fluid" id="collapseCon">
@@ -115,9 +117,9 @@
           >
         </h1>
         <div>
-          <a href="cartPage.html"
-            ><img src="./img/shoppingCart.png" height="40"
-          /></a>
+           <a href="cartPage.html" class="cart-icon"
+                ><img src="./img/shoppingCart.png" height="40"
+              /><span class="cart-count-col">99</span></a>
           <button
             class="navbar-toggler"
             type="button"
@@ -150,9 +152,9 @@
               <a href="login.html">登入</a> | <a href="register.html">註冊</a>
             </li>
             <li>
-              <a href="cartPage.html"
+              <a href="cartPage.html" class="cart-icon"
                 ><img src="./img/shoppingCart.png" height="50"
-              ></a>
+              /><span class="cart-count">99</span></a>
             </li>
           </ul>
         </nav>
@@ -173,6 +175,7 @@
       <!-- 導航列end extent -->
     </header>
     <!-- 導航列end -->
+
 
     <main class="register-center">
       <div class="login-container">
