--- a/builder.html
+++ b/builder.html
@@ -80,70 +80,77 @@
   </style>
 </head>
 <body>
-  <!-- 導航列 -->
-  <header class="sticky-top">
-    <div class="container container-fluid" id="collapseCon">
-      <h1 class="nav_h1" style="font-size: 30px;">
-        <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
-        <a href="index.html" style="text-decoration: none; color: white"
-          >銀河電腦城</a
-        >
-      </h1>
-      <div>
-        <a href="cartPage.html"
-          ><img src="./img/shoppingCart.png" height="40"
-        /></a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarToggleExternalContent"
-          aria-controls="navbarToggleExternalContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="fa fa-bars"></span>
-        </button>
-      </div>
-    </div>
+ <!-- 導航列 -->
 
-    <div class="container" id="normalCon">
-      <h1 class="nav_h1">
-        <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
-        <a href="index.html" style="text-decoration: none; color: white"
-          >銀河電腦城</a
-        >
-      </h1>
-      <nav>
+    <header class="sticky-top">
+      <!-- collapse container -->
+      <div class="container container-fluid" id="collapseCon">
+        <h1 class="nav_h1" style="font-size: 30px">
+          <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
+          <a href="index.html" style="text-decoration: none; color: white"
+            >銀河電腦城</a
+          >
+        </h1>
+        <div>
+           <a href="cartPage.html" class="cart-icon"
+                ><img src="./img/shoppingCart.png" height="40"
+              /><span class="cart-count-col">99</span></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarToggleExternalContent"
+            aria-controls="navbarToggleExternalContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="fa fa-bars"></span>
+          </button>
+        </div>
+      </div>
+
+      <!-- normal container -->
+      <div class="container" id="normalCon">
+        <h1 class="nav_h1">
+          <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
+          <a href="index.html" style="text-decoration: none; color: white"
+            >銀河電腦城</a
+          >
+        </h1>
+        <nav>
+          <ul>
+            <li><a href="index.html">主頁</a></li>
+            <li><a href="productList.html">產品目錄</a></li>
+            <li><a href="builder.html">自選砌機報價</a></li>
+            <li><a href="about.html">關於我們</a></li>
+            <li>
+              <a href="login.html">登入</a> | <a href="register.html">註冊</a>
+            </li>
+            <li>
+              <a href="cartPage.html" class="cart-icon"
+                ><img src="./img/shoppingCart.png" height="50"
+              /><span class="cart-count">99</span></a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <!-- 導航列extent -->
+      <div class="collapse colbar" id="navbarToggleExternalContent">
         <ul>
           <li><a href="index.html">主頁</a></li>
           <li><a href="productList.html">產品目錄</a></li>
           <li><a href="builder.html">自選砌機報價</a></li>
           <li><a href="about.html">關於我們</a></li>
           <li>
-            <a href="login.html">登入</a> | <a href="register.html">註冊</a>
-          </li>
-          <li>
-            <a href="cartPage.html"
-              ><img src="./img/shoppingCart.png" height="50" style="cursor:pointer;"
-            /></a>
+            <a href="login.html">登入</a> |
+            <a href="register.html">註冊</a>
           </li>
         </ul>
-      </nav>
-    </div>
+      </div>
+      <!-- 導航列end extent -->
+    </header>
+    <!-- 導航列end -->
 
-    <div class="collapse colbar" id="navbarToggleExternalContent">
-      <ul>
-        <li><a href="index.html">主頁</a></li>
-        <li><a href="productList.html">產品目錄</a></li>
-        <li><a href="builder.html">自選砌機報價</a></li>
-        <li><a href="about.html">關於我們</a></li>
-        <li>
-          <a href="login.html">登入</a> | <a href="register.html">註冊</a>
-        </li>
-      </ul>
-    </div>
-  </header>
 
   <main>
     <section class="builder-section">
