+產品列表分類功能

--- a/productList.html
+++ b/productList.html
@@ -87,23 +87,22 @@
     <!-- 導航列end -->
 
     <main>
-      
       <div class="main-flex">
         <!-- 側邊欄 -->
         <aside class="sidebar">
-          <ul>
-            <li class="active" data-category="中央處理器">中央處理器</li>
-            <li data-category="顯示卡">顯示卡</li>
-            <li data-category="記憶體 (RAM)">記憶體 (RAM)</li>
-            <li data-category="儲存裝置">儲存裝置</li>
-            <li data-category="主機板">主機板</li>
-            <li data-category="電腦散熱">電腦散熱</li>
-            <li data-category="電源">電源</li>
-            <li data-category="機箱">機箱</li>
-            <li data-category="手提電腦">手提電腦</li>
+          <ul id="categoryList">
+            <li class="active" data-category="全部商品">全部商品</li>
+            <li>中央處理器</li>
+            <li>顯示卡</li>
+            <li>記憶體 (RAM)</li>
+            <li>儲存裝置</li>
+            <li>主機板</li>
+            <li>電腦散熱</li>
+            <li>電源</li>
+            <li>機箱</li>
+            <li>手提電腦</li>
           </ul>
         </aside>
-
         <!-- 內容區 -->
         <section id="productPanel"></section>
       </div>
